# yakudobot_rs

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220926_194618_create_table_yakudo_scores.rs
src/: database.rs  follow.rs  main.rs  misskey.rs  monitor.rs  scheduler.rs  twitter.rs
src/entity/: mod.rs  yakudo_score.rs
