[package]
name = "yakudobot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-once-cell = "0.4.2"
chrono = "0.4.22"
egg-mode = { version = "0.16.0", features = ["native_tls"], default-features = false }
log = "0.4.17"
pretty_env_logger = "0.4.0"
sea-orm = { version = "0.9.2", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.10"
migration = { path = "./migration" }
reqwest = { version = "0.11.12", default-features = false, features = ["native-tls"] }
opencv = { version = "0.68.0", features = ["imgcodecs", "imgproc"], default-features = false }
tokio-cron-scheduler = { version = "0.8.1", features = ["signal"] }

[profile.release]
lto = true
