[package]
name = "yakudobot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-once-cell = "0.4.2"
chrono = "0.4.22"
log = "0.4.17"
pretty_env_logger = "0.4.0"
sea-orm = { version = "0.9.2", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.10"
migration = { path = "./migration" }
reqwest = { version = "0.11.12", default-features = false, features = ["native-tls"] }
opencv = { version = "0.82.1", features = ["imgcodecs", "imgproc"], default-features = false }
async-recursion = "1.0.0"
futures = "0.3.28"
mime = "0.3.17"
misskey = { git = "https://github.com/poppingmoon/misskey-rs", branch = "feature/13.13.2", version = "0.2.0", features = ["13-13-2"] }

[profile.release]
lto = true
